corrected warning layout issue
git-svn-id: http://vcs.taotesting.com/svn/oat/projects/tao/trunk@12006 62dfeb86-a93f-4914-9d13-15c0a160985d

--- a/install/css/install_warning.css
+++ b/install/css/install_warning.css
@@ -14,7 +14,7 @@
 	font-size:12px;
 	margin-top:180px;
 	line-height:18px;
-	font-weight:bold;
+	font-weight:normal;
 }
 
 .embedWarning{
